# hy-remap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  build.bat  clean.bat  conanfile.txt  config-replace.bat  config.json  config.json.example  debug.bat  readme.md  release.bat  run-debug.bat  run-release.bat  run.bat
include/: enums.h  key_remapper.h  structs.h
src/: action_macro.cpp  action_proffile_shift.cpp  action_profile_shift.cpp  action_simple.cpp  actions.cpp  config.json  config_loader.cpp  configuration.cpp  const.h  enums.h  handle_input.cpp  hook_manager.cpp  input.cpp  key_code_map.cpp  key_hook.cpp  keyboard_hook.cpp  main.cpp  main.h  mouse_hook.cpp  perform_action.cpp  profile_management.cpp  release_action.cpp  serialize_config.cpp  structs.h  util_action.cpp  util_input.cpp  util_profile.cpp  util_string.cpp  util_trigger.cpp  util_window.cpp
src/actions/: actions.h  audio_mixer.cpp  macro.cpp  profile_shift.cpp  run_program.cpp  simple.cpp
src/config/: config.h  config_loader.cpp  const.h  debug_config.cpp  json_serializer.cpp  key_code_map.cpp  optimized_config.cpp  serialize_config.cpp  structs.h
src/controllers/: controllers.h  hook_manager.cpp  input_remapping.cpp  keyboard_hook.cpp  mouse_hook.cpp  perform_action.cpp  profile_management.cpp  release_action.cpp
src/headers/: enums.h  structs.h
src/modules/: audio_mixer_control.cpp  audio_mixer_control.h  handle_input.cpp  hook_manager.cpp  input_remapping.cpp  key_code_map.cpp  keyboard_hook.cpp  modules.h  mouse_hook.cpp  perform_action.cpp  profile_management.cpp  release_action.cpp
src/utils/: action.cpp  input.cpp  instance.cpp  key_code.cpp  mixer_control.cpp  profile.cpp  run_program.cpp  string.cpp  trigger.cpp  utils.h  window.cpp
